pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dotnetapp # POD name example
  labels:
    app.kubernetes.io/name: dotnetapp
    version: "1.2"
    environment: dev
  annotations:
    createdBy: "Tomek"
spec:
  containers:
  - name: dotnetapp
    image: mcr.microsoft.com/dotnet/samples:aspnetapp
    ports:
    - containerPort: 8080
    # envFrom:
    #   - configMapRef:
    #       name: dotnetapp-cf
    # env:
    #   - name: testVal
    #     valueFrom:
    #       configMapKeyRef:
    #         name: dotnetapp-cf2
    #         key: testVal
    # volumeMounts:
    #   - name: config
    #     mountPath: "/mnt/app-config"
    #     readOnly: true
    resources:
      requests:
        memory: "20Mi"
        cpu: "50m"
      limits:
        memory: "70Mi"
        cpu: "80m"
  # volumes:
  #   - name: config
  #     configMap:
  #       name: dotnetapp-cf3
