pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxapp
  labels:
    app.kubernetes.io/name: nginxapp
spec:
  containers:
  - name: nginxapp
    image: nginx:latest
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "20Mi"
        cpu: "50m"
      limits:
        memory: "70Mi"
        cpu: "80m"
