service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service #sample service name
spec:
  selector:
    app.kubernetes.io/name: nginxapp #should be same as one of the POD labels
  type: ClusterIP
  #loadBalancerIP: 108.141.8.147 #ip address of external load balancer
  ports:
  - port: 80 #exposed port
    targetPort: 80 #same as POD port
