ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: other-ingress
  namespace: crc2024
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
            path: /nginx
